Validações na service do contratante